# R3DGET

./: .gitignore  Cargo.toml
example/: config.ron
run_env/: config.ron
run_env/levels/: new_level_1.ron
src/: camer_control.rs  lib.rs  main.rs  more_stolen_code.rs  plagerized_code_to_update_dependencies.rs  stolen_code_to_update_dependencies.rs
src/application_state/: application_state.rs  borrowed_toggle_switch.rs  game_folder_structure.rs  mod.rs
src/level/: control_rect.rs  hallway.rs  level.rs  mesh.rs  mod.rs  room.rs  spatial_grid.rs
src/level/blocks/: air.rs  blocks.rs  full_block.rs  meshable.rs  mod.rs
src/level/prefabs/: prefabs.rs
src/renderer/: camera.rs  mod.rs  renderstate.rs  shader.wgsl  texture.rs  vertex.rs
