[package]
name = "r3dget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1"
anyhow = "1.0"
bytemuck = { version = "1.12", features = [ "derive" ] }
cgmath = { version = "0.18", features = ["serde", "swizzle"] }
env_logger = "0.10"
pollster = "0.3"
log = "0.4"
tobj = { version = "3.2", features = ["async"]}
wgpu = { version = "0.18"}
winit = {version = "0.29.4", features = ["rwh_05"]}
instant = "0.1"
native-dialog = "0.7.0"
egui = "0.24.1"
serde = { version = "1.0.193", features = ["derive"] }
ron = "0.8.1"
egui-modal = "0.3.1"
egui_dnd = "0.5.1"
gltf = "1.4.0"
uid = "0.1.7"
earcutr = "0.4.3"
itertools = "0.12.0"
geo = "0.27.0"

[dependencies.egui-wgpu]
version = "0.24.1"
default-features = true
features = ["winit"]


[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.11" }
console_error_panic_hook = "0.1"
console_log = "1.0"
wgpu = { version = "0.18", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}
